2006-04-27  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/wmv/wmv.py: Fix a bug. How did that
	get in here....

2006-04-25  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/asf/asf.xml: Hmmm how could my 
	tests have ever worked. Multiple eaters .. not feeders.

2005-12-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion-windowsmedia.spec.in:
	  update
	* flumotion/component/wma/wma.py:
	* flumotion/component/wmv/wmv.py:
	  fix syntax errors

2005-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/asf/asf.py:
	* flumotion/component/asf/asf.xml:
	* flumotion/component/wma/wma.py:
	* flumotion/component/wma/wma.xml:
	* flumotion/component/wmv/wmv.py:
	* flumotion/component/wmv/wmv.xml:
	  update for new component protocol