@@ -1,0 +1,10 @@
+include $(top_srcdir)/common/python.mk
+
+noinst_PYTHON = setup.py
+
+EXTRA_DIST = pycheckerhelp.py preamble.py
+
+CLEANFILES = setup.py
+
+clean-local:
+	rm -rf *.pyc *.pyo
